--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
